--- a/OnlineShoppingBUS/OnlineShoppingBUS.csproj
+++ b/OnlineShoppingBUS/OnlineShoppingBUS.csproj
@@ -54,6 +54,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DonDatHangBUS.cs" />
     <Compile Include="HangHoaBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
