--- a/OnlineShoppingDAO/OnlineShoppingDAO.csproj
+++ b/OnlineShoppingDAO/OnlineShoppingDAO.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBConnect.cs" />
+    <Compile Include="DonDatHangDAO.cs" />
     <Compile Include="HangHoaDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
